# git-split-commit

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
git_split_commit/: command.py
