[metadata]
name = git_split_commit
version = 0.1.0

[files]
packages = git_split_commit

[entry_points]
console_scripts =
    git-split-commit = git_split_commit.command:split

[tool:pytest]
addopts = -ra --lfnf=all
testpaths = git_split_commit/
python_files = tests.py test_*.py *_tests.py *_test.py
